dev: sheet reader protype

--- a/SpdsObjBySheetInfo.csproj
+++ b/SpdsObjBySheetInfo.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.19.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="imapimgd">
       <HintPath>C:\Users\mne21\Desktop\NC_SDK_RU_23.0.6116.4106.6223\include-x64\imapimgd.dll</HintPath>
       <Private>False</Private>
