ref: full refactoring
delete "count" column
move code files to new folder
rename classes and project

--- a/SpdsObjByExcelParams.csproj
+++ b/SpdsObjByExcelParams.csproj
@@ -5,10 +5,23 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PlatformTarget>x64</PlatformTarget>
+    <Company>$(Ivanco)</Company>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageTags>#nanocad</PackageTags>
+    <Authors>$(Ivanco)</Authors>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DocumentFormat.OpenXml" Version="2.19.0">
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.20.0">
       <GeneratePathProperty>False</GeneratePathProperty>
     </PackageReference>
   </ItemGroup>
@@ -45,6 +58,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
